--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,47 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1506126799754-92bc47fc5d78?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80);">
+    <div class="container">
+      <h1>Rent your dream home</h1>
+      <p>Live in a treehouse, castle, or sailboat</p>
+    </div>
+  </div>
+
+  <div class="container" align="center">
+    <div class="mt-5">
+      <h4>The stay of your dreams</h4>
+      <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+        <div class="search-form-control form-group">
+          <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Enter your location" />
+          <button name="button" type="submit" class="btn btn-flat">
+            <i class="fas fa-search"></i> Search
+          </button>
+        </div>
+      </form>
+    </div>
+
+    <div class="cards mt-5">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_cabin_m5e8xx.jpg)">
+        Cabins
+      </div>
+
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_castle_dxo4to.jpg)">
+        Castles
+      </div>
+
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_sailboat_yzpxor.jpg)">
+        Sailboats
+      </div>
+    </div>
+
+
+    <div class="footer">
+      <div class="footer-links">
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+      </div>
+      <div class="footer-copyright">
+      </div>
+    </div>
+  </div>
