--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1506126799754-92bc47fc5d78?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80);">
-    <div class="container">
-      <h1>Rent your dream home</h1>
-      <p>Live in a treehouse, castle, or sailboat</p>
+    <div class="container" align="center">
+      <h1>WhimAway</h1>
+      <p>making the stay of your dreams come true</p>
     </div>
   </div>
 
   <div class="container" align="center">
     <div class="mt-5">
-      <h4>The stay of your dreams</h4>
+      <h4>Find your property now</h4>
       <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
         <div class="search-form-control form-group">
           <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Enter your location" />
@@ -33,7 +33,7 @@
     </div>
 
 
-    <div class="footer">
+    <div class="footer mt-5">
       <div class="footer-links">
         <a href="#"><i class="fab fa-github"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
@@ -42,6 +42,7 @@
         <a href="#"><i class="fab fa-linkedin"></i></a>
       </div>
       <div class="footer-copyright">
+        Designed with 🎉 in Le Wagon Batch #243.
       </div>
     </div>
   </div>
