--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -10,6 +10,8 @@
   <div class="d-flex flex-column">
     <div>
       <%= link_to '<< Back', properties_path %>
+      <%= link_to 'EDIT', edit_property_path %>
+      <%= link_to 'DESTROY', property_path(@property) %>
     </div>
   </div>
 </div>
