created form for property creation/update

--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,1 +1,9 @@
-<%= simple_form %>
+<%= simple_form_for property do |f| %>
+  <%= f.input :name %>
+  <%= f.input :address %>
+  <%= f.input :photo %>
+  <%= f.input :rating %>
+  <%= f.input :category %>
+  <%= f.input :price %>
+  <%= f.submit button_label %>
+<% end %>
