--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -7,6 +7,7 @@
 .card-category {
   background-size: cover;
   background-position: center;
+  opacity: 0.8;
   height: 180px;
   display: flex;
   justify-content: center;
@@ -19,6 +20,14 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
+.card-category a {
+  color: white;
+}
+
+.card-category:hover {
+  box-shadow: 1px 8px 20px grey;
+  opacity: 1;
+}
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
