Edits to home page and property index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,13 @@
   background: white;
 }
 
+.navbar h2 {
+  text-align: center;
+  font-family: $logo-font;
+  font-size: 40px;
+  color: #4da0dc;
+}
+
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
