--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1506126799754-92bc47fc5d78?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80);">
     <div class="container" align="center">
-      <h1>WhimAway</h1>
-      <p>making the stay of your dreams come true</p>
+      <h1>make the stay of your dreams come true</h1>
     </div>
   </div>
 
