--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,14 +5,6 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :first_name,
-    required: true,
-    autofocus: true,
-    input_html: { autocomplete: "first_name" }%>
-    <%= f.input :last_name,
-    required: true,
-    autofocus: true,
-    input_html: { autocomplete: "last_name" }%>
     <%= f.input :email,
     required: true,
     autofocus: true,
@@ -24,10 +16,10 @@
     <%= f.input :password_confirmation,
     required: true,
     input_html: { autocomplete: "new-password" } %>
-    <%= f.input :photo,
+<!--     <%= f.input :photo,
     required: true,
     autofocus: true,
-    input_html: { autocomplete: "photo" }%>
+    input_html: { autocomplete: "photo" }%> -->
   </div>
 
   <div class="form-actions">
