--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
     <%= f.input :password_confirmation,
     required: true,
     input_html: { autocomplete: "new-password" } %>
-<!--     <%= f.input :photo,
+<!--     <%#= f.input :photo,
     required: true,
     autofocus: true,
     input_html: { autocomplete: "photo" }%> -->
