--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,17 +17,21 @@
       </form>
     </div>
 
-    <div class="cards mt-5">
+    <div class="category-cards mt-5">
+       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1499696010180-025ef6e1a8f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
+        <%= link_to 'All Properties', properties_path %>
+      </div>
+
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_cabin_m5e8xx.jpg)">
-        Cabins
+        <%= link_to 'Cabins', properties_path %>
       </div>
 
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_castle_dxo4to.jpg)">
-        Castles
+        <%= link_to 'Castles', properties_path %>
       </div>
 
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_sailboat_yzpxor.jpg)">
-        Sailboats
+        <%= link_to 'Sailboats', properties_path %>
       </div>
     </div>
 
