--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container mt-3 pb-3">
-  <div class="row justify-content-between">
-    <div class="col-4">
+  <div class="row">
+    <div class="col-4 p-2">
       <div class="form-wrapper" style="width: 305px; margin: 0 auto;">
-        <h3>Search by date</h3>
+        <h4>Search by date</h4>
 
         <%= simple_form_for :search, method: "get" do |f| %>
         <%= f.input :starts_at, as: :string, required: false, input_html: {class: "datepicker"} %>
@@ -12,26 +12,24 @@
       </div>
     </div>
 
-    <div class="col-8">
+    <div class="col p-2">
       <h3>Check out our properties</h3>
       <div class="cards">
         <% @properties.each do |property| %>
         <div class="card-trip">
-           <%= link_to property_path(property) do %>
-          <img src= <%= property.photo %> >
-          <% end %>
-          <div class="card-trip-infos">
-            <div>
-              <h2><%= link_to property.name, property_path(property) %></h2>
-              <p><%= property.category %></p>
-            </div>
-            <h3 class="card-trip-pricing">$<%= property.price %>/day</h3>
+         <%= link_to property_path(property) do %>
+         <img src= <%= property.photo %> >
+         <% end %>
+         <div class="card-trip-infos">
+          <div>
+            <h2><%= link_to property.name, property_path(property) %></h2>
+            <p><%= property.category %></p>
           </div>
+          <h3 class="card-trip-pricing">$<%= property.price %>/day</h3>
         </div>
-
-        <% end %>
       </div>
+      <% end %>
     </div>
   </div>
 </div>
-</div>
+
