--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -119,3 +119,20 @@
   top: -20px;
   width: 40px;
 }
+
+.property {
+  background-color: white;
+  padding: 10px;
+  border: 1px rgba(0,0,0,0.2) solid;
+}
+
+.property-image {
+  text-align: right;
+}
+
+.property-image > img {
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  width: 500px;
+  height: 100%;
+  border-radius: 5px;
+}
