--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -11,11 +11,11 @@
         <% end %>
       </div>
       <div
-        id=“map”
-        style=“width: 100%;
-        height: 200px;”
-        data-markers=“<%= @markers.to_json %>”
-        data-mapbox-api-key=“<%= ENV[‘MAPBOX_API_KEY’] %>”
+        id="map"
+        style="width: 100%;
+        height: 200px;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
       ></div>
     </div>
     <div class="col-8">
