--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,9 +22,8 @@
     input_html: { autocomplete: "photo" }%> -->
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
+
+    <%= f.button :submit, "Sign up" , :class => 'btn btn-outline-primary' %>
   <% end %>
 
   <%= render "devise/shared/links" %>
