--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
   </div>
 
 
-    <%= f.button :submit, "Sign up" , :class => 'btn btn-outline-primary' %>
+    <%= f.button :submit, "Sign up" , :class => 'btn btn-outline-primary btnclass' %>
   <% end %>
 
   <%= render "devise/shared/links" %>
