--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,51 +1,52 @@
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1506126799754-92bc47fc5d78?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80);">
-    <div class="container" align="center">
-      <h1>make the stay of your dreams come true</h1>
-    </div>
-  </div>
-
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1506126799754-92bc47fc5d78?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80);">
   <div class="container" align="center">
-    <div class="mt-5">
-      <h4>Find your property now</h4>
-      <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-        <div class="search-form-control form-group">
-          <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Enter your location" />
-          <button name="button" type="submit" class="btn btn-flat">
-            <i class="fas fa-search"></i> Search
-          </button>
-        </div>
-      </form>
+    <h1>Whimaway</h1>
+    <p>make the stay of your dreams come true</p>
+  </div>
+</div>
+
+<div class="container" align="center">
+  <div class="mt-5 mb-5">
+    <h4>Find your property now</h4>
+    <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+      <div class="search-form-control form-group">
+        <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Enter your location" />
+        <button name="button" type="submit" class="btn btn-flat">
+          <i class="fas fa-search"></i> Search
+        </button>
+      </div>
+    </form>
+  </div>
+
+  <h4>Search by category</h4>
+  <div class="category-cards mt-3">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1499696010180-025ef6e1a8f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
+      <%= link_to 'All Properties', properties_path %>
     </div>
 
-    <div class="category-cards mt-5">
-       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1499696010180-025ef6e1a8f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
-        <%= link_to 'All Properties', properties_path %>
-      </div>
-
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_cabin_m5e8xx.jpg)">
-        <%= link_to 'Cabins', properties_path %>
-      </div>
-
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_castle_dxo4to.jpg)">
-        <%= link_to 'Castles', properties_path %>
-      </div>
-
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_sailboat_yzpxor.jpg)">
-        <%= link_to 'Sailboats', properties_path %>
-      </div>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558605944/fancy-treehouse_vjqigi.jpg)">
+      <%= link_to 'Treehouses', properties_path(:category=>"Treehouse") %>
     </div>
 
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_castle_dxo4to.jpg)">
+      <%= link_to 'Castles', properties_path(:category=>"Castle") %>
+    </div>
 
-    <div class="footer mt-5">
-      <div class="footer-links">
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-      </div>
-      <div class="footer-copyright">
-        Designed with 🎉 in Le Wagon Batch #243.
-      </div>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_sailboat_yzpxor.jpg)">
+      <%= link_to 'Sailboats', properties_path(:category=>"Sailboat") %>
     </div>
   </div>
+</div>
+
+<div class="footer mt-5">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    Designed with 🎉 in Le Wagon Batch #243.
+  </div>
+</div>
