changed flatpickr to date range

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -3,12 +3,7 @@
     <div class="col-4 p-2">
       <div class="form-wrapper" style="width: 305px; margin: 0 auto;">
         <h4>Search by date</h4>
-
-        <%= simple_form_for :search, method: "get" do |f| %>
-        <%= f.input :starts_at, as: :string, required: false, input_html: {class: "datepicker"} %>
-        <%= f.input :ends_at, as: :string, required: false, input_html: {class: "datepicker"} %>
-        <%= f.button :submit, "Go", class: "btn btn-primary" %>
-        <% end %>
+        <%= render 'shared/datepickr', button_label: 'Go' %>
       </div>
       <div
         id="map"
