--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Properties#new</h1>
+<h1>Create a New Property</h1>
 
 <%= render 'shared/form' %>
-<p>Find me in app/views/properties/new.html.erb</p>
+
