--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -11,6 +11,7 @@
           <li><%= @property.description %></li>
         </ul>
       </div>
+      <%= render 'shared/datepickr', button_label: 'Book' %>
     </div>
     <div class="col mt-3">
       <div class="property-image">
