--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Properties#edit</h1>
+<h1>Edit <%= @property.name %></h1>
 
 <%= render 'shared/form' %>
-<p>Find me in app/views/properties/edit.html.erb</p>
+
