--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Properties#new</h1>
+<div class="container p-3">
+  <h2>List Your Property</h2>
 
-<%= render 'shared/form' %>
-<p>Find me in app/views/properties/new.html.erb</p>
+  <%= render 'shared/form' %>
+</div>
