--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,10 +1,9 @@
 <%= simple_form_for @property do |f| %>
   <%= f.input :name %>
   <%= f.input :address %>
-  <%= f.input :photo %>
-  <%= f.input :rating %>
-  <%= f.input :category %>
+  <%= f.input :photo, label: 'Photo URL' %>
+  <%= f.input :category, collection: [ "Treehouse", "Sailboat", "Castle"] %>
   <%= f.input :description %>
-  <%= f.input :price %>
-  <%= f.submit %>
+  <%= f.input :price, label: 'Price per night' %>
+  <%= f.submit :Submit, class: "btn btn-primary" %>
 <% end %>
