--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Properties#edit</h1>
+<div class="container p-3">
+  <h2>Edit My Property</h2>
 
-<%= render 'shared/form' %>
-<p>Find me in app/views/properties/edit.html.erb</p>
+  <%= render 'shared/form' %>
+</div>
