--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -21,14 +21,17 @@
   <div class="row">
     <div class="col p-3">
       <div class="btn btn-outline-primary">
-        <%= link_to 'Back', properties_path %>
-        <% if  policy(@property).edit? %>
-        <%= link_to 'EDIT', edit_property_path(@property)%>
-        <% end %>
-        <% if  policy(@property).destroy? %>
-        <%= link_to 'DESTROY', property_path(@property), data: { confirm: 'Are you sure?' } %>
-        <% end %>
+        <%= link_to 'Return to Listings', properties_path %>
       </div>
     </div>
   </div>
+  <div class="row mt-5">
+    <% if  policy(@property).edit? %>
+      <%= link_to 'Edit', edit_property_path(@property)%> |
+    <% end %>
+    <% if  policy(@property).destroy? %>
+      <%= link_to 'Remove', property_path(@property), data: { confirm: 'Are you sure?' } %>
+    <% end %>
+  </div>
 </div>
+
