added booking capability to book button on property show page

--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -11,7 +11,13 @@
           <li><%= @property.description %></li>
         </ul>
       </div>
-      <%= render 'shared/datepickr', button_label: 'Book' %>
+      <%= simple_form_for [@property, @booking] do |f| %>
+        <%= f.input :check_in_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+        <%= f.input :check_out_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+        <%= f.input :num_guests %>
+        <%= f.button :submit, 'Book', class: "btn btn-primary" %>
+      <% end %>
+
     </div>
     <div class="col mt-3">
       <div class="property-image">
