--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit <%= @property.name %></h1>
+<div class="container p-3">
+  <h2>Edit '<%= @property.name %>'</h2>
 
-<%= render 'shared/form' %>
+  <%= render 'shared/form' %>
+</div>
