--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,13 +15,13 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
       <li class="nav-item active">
-        <%= link_to "Bookings", "#", class: "nav-link" %>
+        <%= link_to "My Bookings", properties_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Messages", "#", class: "nav-link" %>
+        <%= link_to "My Listings", properties_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to 'Create Property', new_property_path, class: "nav-link" %>
+        <%= link_to 'List a Property', new_property_path, class: "nav-link" %>
       </li>
       <li class="nav-item dropdown">
         <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
