--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,10 +15,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
       <li class="nav-item active">
-        <%= link_to "My Bookings", properties_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "My Listings", properties_path, class: "nav-link" %>
+        <%= link_to "Available Properties", properties_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to 'List a Property', new_property_path, class: "nav-link" %>
