--- a/app/views/shared/_datepickr.html.erb
+++ b/app/views/shared/_datepickr.html.erb
@@ -1,7 +1,7 @@
-<%= simple_form_for :search, method: "get" do |f| %>
-  <%= f.input :overnight_dates, as: :string, required: false, input_html: {class: "datepicker"} %>
-
-<!--<%= f.input :check_out, as: :string, required: false, input_html: {class: "datepicker"} %> -->
-   <%= f.input :num_guests %>
-  <%= f.button :submit, button_label, class: "btn btn-primary" %>
+<%= simple_form_for :search, method: "get" do |f|%>
+  <%= f.input :check_in_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+  <%= f.input :check_out_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+  <%= f.input :num_guests %>
+  <%= f.button :submit, 'Go', class: "btn btn-primary" %>
+  <%#= link_to 'Go', properties_available_path, class: "btn btn-primary" %>
 <% end %>
