destroy works for user's properties

--- a/app/views/pages/my_properties.html.erb
+++ b/app/views/pages/my_properties.html.erb
@@ -1,6 +1,45 @@
 <ul>
   <% @properties.each do |property| %>
     <li> <%= property.name %></li>
-  <% end %>
 </ul>
+
+<div class="container">
+  <div class="row">
+    <div class="col mt-3">
+      <div class="property">
+        <h2><%= property.name %></h2>
+        <h3><%= '⭐️' * property.rating.to_i %></h3>
+        <h5><em><%= property.category %></em></h5>
+        <h6><%= property.address %></h6>
+        <ul>
+          <li><b>Price per night:</b> $<%= property.price %></li>
+          <li><%= property.description %></li>
+        </ul>
+      </div>
+    </div>
+    <div class="col mt-3">
+      <div class="property-image">
+        <%= image_tag(property.photo) %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col p-3">
+      <div class="btn btn-outline-primary">
+        <%= link_to 'Return to Listings', properties_path %>
+      </div>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <% if  policy(property).edit? %>
+      <%= link_to 'Edit', edit_property_path(property)%> |
+    <% end %>
+    <% if  policy(property).destroy? %>
+      <%= link_to 'Remove', property_path(property), data: { confirm: 'Are you sure?', method: :delete } %>
+    <% end %>
+    <% end %>
+  </div>
+</div>
+
+
 
