--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,10 +4,14 @@
 }
 
 .navbar h2 {
-  text-align: center;
   font-family: $logo-font;
   font-size: 40px;
   color: #4da0dc;
+  opacity: 0.75;
+}
+
+.navbar h2:hover {
+  opacity: 1;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -18,8 +22,10 @@
   width: 45px;
   opacity: 0.5;
   hover: 1;
+  vertical-align: top;
 }
 
 .navbar-lewagon .navbar-brand img:hover {
   opacity: 1;
 }
+
