--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,6 @@
     <p>make the stay of your dreams come true</p>
   </div>
 </div>
-
 <div class="container" align="center">
   <div class="mt-5 mb-5">
     <h4>Find your property now</h4>
@@ -17,27 +16,22 @@
       </div>
     </form>
   </div>
-
-  <h4>Search by category</h4>
+  <h4>View by category</h4>
   <div class="category-cards mt-3">
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1499696010180-025ef6e1a8f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
       <%= link_to 'All Properties', properties_path %>
     </div>
-
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558605944/fancy-treehouse_vjqigi.jpg)">
       <%= link_to 'Treehouses', properties_path(:category=>"Treehouse") %>
     </div>
-
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_castle_dxo4to.jpg)">
       <%= link_to 'Castles', properties_path(:category=>"Castle") %>
     </div>
-
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dh2tpkp5c/image/upload/v1558364004/card_sailboat_yzpxor.jpg)">
       <%= link_to 'Sailboats', properties_path(:category=>"Sailboat") %>
     </div>
   </div>
 </div>
-
 <div class="footer mt-5">
   <div class="footer-links">
     <a href="#"><i class="fab fa-github"></i></a>
