--- a/app/views/pages/my_bookings.html.erb
+++ b/app/views/pages/my_bookings.html.erb
@@ -1,7 +1,16 @@
-<ul>
+<div class="container mt-3 mb-3">
+  <h1>My Bookings</h1>
   <% @bookings.each do |booking| %>
-    <li> <%= bookings.check_in_date %></li>
-    <li> <%= bookings.check_out_date %></li>
-    <li> <%= bookings.num_guests %></li>
-    <% end %>
-</ul>
+    <div class="card-product mt-3">
+      <%= image_tag(booking.property.photo) %>
+      <div class="card-product-infos">
+        <h2><%= booking.property.name %></h2>
+        <p><strong>Check-in:</strong> <%= booking.check_in_date %><br>
+          <strong>Check-out:</strong> <%= booking.check_out_date %><br>
+          <strong>Total Amount:</strong> $<%= booking.tot_price %>
+        </p>
+        <p><%= link_to 'View booking details' %></p>
+      </div>
+    </div>
+  <% end %>
+</div>
