--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,12 +8,7 @@
 <div class="container" align="center">
   <div class="mt-5 mb-5">
     <h4>Find your property now</h4>
-    <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-      <div class="search-form-control form-group">
-        <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Enter your location" />
-        <button name="button" type="submit" class="btn btn-flat">
-          <i class="fas fa-search"></i> Search
-        </button>
+    <%= render "shared/search" %>
       </div>
     </form>
   </div>
