--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -10,14 +10,15 @@
           <li><b>Price per night:</b> $<%= @property.price %></li>
           <li><%= @property.description %></li>
         </ul>
+        <hr>
+        <h5>Book Property</h5>
+        <%= simple_form_for [@property, @booking] do |f| %>
+          <%= f.input :check_in_date, label: 'Check-In Date', as: :string, required: false, input_html: {class: "datepicker"} %>
+          <%= f.input :check_out_date, label: 'Check-Out Date', as: :string, required: false, input_html: {class: "datepicker"} %>
+          <%= f.input :num_guests, label: 'Number of Guests' %>
+          <%= f.button :submit, 'Book', class: "btn btn-primary" %>
+        <% end %>
       </div>
-      <%= simple_form_for [@property, @booking] do |f| %>
-        <%= f.input :check_in_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-        <%= f.input :check_out_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-        <%= f.input :num_guests %>
-        <%= f.button :submit, 'Book', class: "btn btn-primary" %>
-      <% end %>
-
     </div>
     <div class="col mt-3">
       <div class="property-image">
@@ -41,4 +42,3 @@
     <% end %>
   </div>
 </div>
-
