--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,17 +6,19 @@
 </div>
 <div class="container" align="center">
   <div class="mt-5 mb-5">
-    <h4>Find your property now</h4>
-    <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+    <h5>Find a property</h5>
+    <%= render "shared/search" %>
+
+    <!-- <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
       <div class="search-form-control form-group">
         <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Enter your location" />
         <button name="button" type="submit" class="btn btn-flat">
           <i class="fas fa-search"></i> Search
         </button>
       </div>
-    </form>
+    </form> -->
   </div>
-  <h4>View by category</h4>
+  <h5>View by category</h5>
   <div class="category-cards mt-3">
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1499696010180-025ef6e1a8f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
       <%= link_to 'All Properties', properties_path %>
